fix (TooltipDirective): resolve pending tooltip problem on mobile devices, add ngDestroy hook to clear view ref

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -96,6 +96,16 @@
   padding: 0.25rem 0.5rem;
 }
 
+@media (hover: none) {
+  .tooltip {
+    display: none !important;
+  }
+}
+
+.sidebar-toggler-tooltip {
+  pointer-events: none;
+}
+
 /* ===== Mobile ===== */
 @media (max-width: 992px) {
   .navbar-collapse {
